@@ -28,7 +28,7 @@
     </tr>
     <tr>
       <th>Latest Development Release</th>
-      <td><a href="v4.0.0.html">v4.0.0beta4</a></td>
+      <td><a href="v4.0.0.html">v4.0.0beta5</a></td>
     </tr>
     <tr>
       <th>Master Download Site</th>
@@ -129,7 +129,7 @@
   </ul>
   <hr>
   <p>
-    Last updated  $Date: 2009-11-04 17:38:13 $.
+    Last updated  $Date: 2009-11-04 17:49:25 $.
   </p>
 </body>
 </html>
